fix: footer text align

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7991,6 +7991,10 @@ li {
     align-items: flex-end;
   }
 
+  .align-items-md-start {
+    align-items: flex-start;
+  }
+
   .justify-content-md-end {
     justify-content: flex-end;
   }
