--- a/assets/scss/_additional.scss
+++ b/assets/scss/_additional.scss
@@ -991,6 +991,9 @@ li {
   .align-items-md-end {
     align-items: flex-end;
   }
+  .align-items-md-start {
+    align-items: flex-start;
+  }
   .justify-content-md-end {
     justify-content: flex-end;
   }
